grammar/SpadeParser.cpp

// Generated from D:/Programming (Ankit)/Projects/spadec/grammar\Spade.g4 by ANTLR 4.12.0


#include "SpadeVisitor.h"

#include "SpadeParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SpadeParserStaticData final {
  SpadeParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SpadeParserStaticData(const SpadeParserStaticData&) = delete;
  SpadeParserStaticData(SpadeParserStaticData&&) = delete;
  SpadeParserStaticData& operator=(const SpadeParserStaticData&) = delete;
  SpadeParserStaticData& operator=(SpadeParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag spadeParserOnceFlag;
SpadeParserStaticData *spadeParserStaticData = nullptr;

void spadeParserInitialize() {
  assert(spadeParserStaticData == nullptr);
  auto staticData = std::make_unique<SpadeParserStaticData>(
    std::vector<std::string>{
      "sep", "compilationUnit", "packageStmt", "importStmt", "reference", 
      "declaration", "enumDecl", "enumList", "enumerator", "annoDecl", "interfaceDecl", 
      "classDecl", "parentList", "parent", "declName", "typeParams", "typeParam", 
      "memberDecl", "fieldDecl", "methodDecl", "operators", "constructorDecl", 
      "modifiers", "accessors", "functionDecl", "definition", "params", 
      "paramList", "param", "varDecl", "name", "stmts", "stmt", "destructDecl", 
      "destruct", "block", "matchCase", "catchStmt", "finallyStmt", "body", 
      "else", "expr", "assigneeList", "assignee", "assignOperator", "postfix", 
      "args", "arg", "indexer", "slice", "primary", "constant", "literal", 
      "objectBuilder", "items", "entries", "entry", "type", "typeArgs", 
      "typeArg", "paramTypes", "paramType", "typeList", "memberTypeList", 
      "memberType"
    },
    std::vector<std::string>{
      "", "';'", "'.'", "'{'", "'}'", "','", "'='", "'('", "')'", "':'", 
      "'operator'", "'->'", "'\\u003F\\u003F'", "'**'", "'<<'", "'>>>'", 
      "'>>'", "'&'", "'^'", "'|'", "'_'", "'...'", "'['", "']'", "'\\u003F'", 
      "'+='", "'-='", "'*='", "'/='", "'%='", "'**='", "'<<='", "'>>='", 
      "'>>>='", "'&='", "'|='", "'^='", "'\\u003F\\u003F='", "'package'", 
      "'import'", "'export'", "'extends'", "'implements'", "'enum'", "'class'", 
      "'interface'", "'annotation'", "'init'", "'fun'", "'const'", "'var'", 
      "'abstract'", "'final'", "'static'", "'inline'", "'private'", "'protected'", 
      "'internal'", "'public'", "'if'", "'else'", "'while'", "'do'", "'for'", 
      "'in'", "'match'", "'when'", "'throw'", "'try'", "'catch'", "'finally'", 
      "'continue'", "'break'", "'return'", "'yield'", "'>'", "'>='", "'!='", 
      "'=='", "'<='", "'<'", "'%'", "'/'", "'*'", "'+'", "'-'", "'~'", "'!'", 
      "'as'", "'is'", "'not'", "'and'", "'or'", "'super'", "'this'", "'true'", 
      "'false'", "'null'", "'object'", "'varKind'", "'typeof'", "'out'", 
      "'ref'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "PACKAGE", "IMPORT", "EXPORT", "EXTENDS", "IMPLEMENTS", 
      "ENUM", "CLASS", "INTERFACE", "ANNOTATION", "INIT", "FUN", "CONST", 
      "VAR", "ABSTRACT", "FINAL", "STATIC", "INLINE", "PRIVATE", "PROTECTED", 
      "INTERNAL", "PUBLIC", "IF", "ELSE", "WHILE", "DO", "FOR", "IN", "MATCH", 
      "WHEN", "THROW", "TRY", "CATCH", "FINALLY", "CONTINUE", "BREAK", "RETURN", 
      "YIELD", "GT", "GE", "NE", "EQ", "LE", "LT", "MODULUS", "SLASH", "STAR", 
      "PLUS", "DASH", "TILDE", "BANG", "AS", "IS", "NOT", "AND", "OR", "SUPER", 
      "THIS", "TRUE", "FALSE", "NULL", "OBJECT", "TYPE", "TYPEOF", "OUT", 
      "REF", "IDENTIFIER", "INTEGER", "FLOAT", "STRING", "WS", "NEWLINE", 
      "BLOCK_COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  spadeParserStaticData = staticData.release();
}

}

SpadeParser::SpadeParser(TokenStream *input) : SpadeParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SpadeParser::SpadeParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SpadeParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *spadeParserStaticData->atn, spadeParserStaticData->decisionToDFA, spadeParserStaticData->sharedContextCache, options);
}

SpadeParser::~SpadeParser() {
  delete _interpreter;
}

const atn::ATN& SpadeParser::getATN() const {
  return *spadeParserStaticData->atn;
}

std::string SpadeParser::getGrammarFileName() const {
  return "Spade.g4";
}

const std::vector<std::string>& SpadeParser::getRuleNames() const {
  return spadeParserStaticData->ruleNames;
}

const dfa::Vocabulary& SpadeParser::getVocabulary() const {
  return spadeParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SpadeParser::getSerializedATN() const {
  return spadeParserStaticData->serializedATN;
}


//----------------- SepContext ------------------------------------------------------------------

SpadeParser::SepContext::SepContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SpadeParser::SepContext::getRuleIndex() const {
  return SpadeParser::RuleSep;
}


std::any SpadeParser::SepContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitSep(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::SepContext* SpadeParser::sep() {
  SepContext *_localctx = _tracker.createInstance<SepContext>(_ctx, getState());
  enterRule(_localctx, 0, SpadeParser::RuleSep);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(133);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(130);
        match(SpadeParser::T__0); 
      }
      setState(135);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompilationUnitContext ------------------------------------------------------------------

SpadeParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeParser::CompilationUnitContext::EOF() {
  return getToken(SpadeParser::EOF, 0);
}

SpadeParser::PackageStmtContext* SpadeParser::CompilationUnitContext::packageStmt() {
  return getRuleContext<SpadeParser::PackageStmtContext>(0);
}

std::vector<SpadeParser::ImportStmtContext *> SpadeParser::CompilationUnitContext::importStmt() {
  return getRuleContexts<SpadeParser::ImportStmtContext>();
}

SpadeParser::ImportStmtContext* SpadeParser::CompilationUnitContext::importStmt(size_t i) {
  return getRuleContext<SpadeParser::ImportStmtContext>(i);
}

std::vector<SpadeParser::DeclarationContext *> SpadeParser::CompilationUnitContext::declaration() {
  return getRuleContexts<SpadeParser::DeclarationContext>();
}

SpadeParser::DeclarationContext* SpadeParser::CompilationUnitContext::declaration(size_t i) {
  return getRuleContext<SpadeParser::DeclarationContext>(i);
}


size_t SpadeParser::CompilationUnitContext::getRuleIndex() const {
  return SpadeParser::RuleCompilationUnit;
}


std::any SpadeParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::CompilationUnitContext* SpadeParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 2, SpadeParser::RuleCompilationUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(137);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeParser::PACKAGE) {
      setState(136);
      packageStmt();
    }
    setState(142);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SpadeParser::IMPORT) {
      setState(139);
      importStmt();
      setState(144);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(148);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 576311218722045952) != 0)) {
      setState(145);
      declaration();
      setState(150);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(151);
    match(SpadeParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PackageStmtContext ------------------------------------------------------------------

SpadeParser::PackageStmtContext::PackageStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeParser::PackageStmtContext::PACKAGE() {
  return getToken(SpadeParser::PACKAGE, 0);
}

SpadeParser::ReferenceContext* SpadeParser::PackageStmtContext::reference() {
  return getRuleContext<SpadeParser::ReferenceContext>(0);
}

SpadeParser::SepContext* SpadeParser::PackageStmtContext::sep() {
  return getRuleContext<SpadeParser::SepContext>(0);
}


size_t SpadeParser::PackageStmtContext::getRuleIndex() const {
  return SpadeParser::RulePackageStmt;
}


std::any SpadeParser::PackageStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitPackageStmt(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::PackageStmtContext* SpadeParser::packageStmt() {
  PackageStmtContext *_localctx = _tracker.createInstance<PackageStmtContext>(_ctx, getState());
  enterRule(_localctx, 4, SpadeParser::RulePackageStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(153);
    match(SpadeParser::PACKAGE);
    setState(154);
    reference();
    setState(155);
    sep();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

SpadeParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeParser::ImportStmtContext::IMPORT() {
  return getToken(SpadeParser::IMPORT, 0);
}

SpadeParser::ReferenceContext* SpadeParser::ImportStmtContext::reference() {
  return getRuleContext<SpadeParser::ReferenceContext>(0);
}

SpadeParser::SepContext* SpadeParser::ImportStmtContext::sep() {
  return getRuleContext<SpadeParser::SepContext>(0);
}

tree::TerminalNode* SpadeParser::ImportStmtContext::AS() {
  return getToken(SpadeParser::AS, 0);
}

tree::TerminalNode* SpadeParser::ImportStmtContext::IDENTIFIER() {
  return getToken(SpadeParser::IDENTIFIER, 0);
}


size_t SpadeParser::ImportStmtContext::getRuleIndex() const {
  return SpadeParser::RuleImportStmt;
}


std::any SpadeParser::ImportStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitImportStmt(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::ImportStmtContext* SpadeParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 6, SpadeParser::RuleImportStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(157);
    match(SpadeParser::IMPORT);
    setState(158);
    reference();
    setState(161);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeParser::AS) {
      setState(159);
      match(SpadeParser::AS);
      setState(160);
      match(SpadeParser::IDENTIFIER);
    }
    setState(163);
    sep();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReferenceContext ------------------------------------------------------------------

SpadeParser::ReferenceContext::ReferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SpadeParser::ReferenceContext::IDENTIFIER() {
  return getTokens(SpadeParser::IDENTIFIER);
}

tree::TerminalNode* SpadeParser::ReferenceContext::IDENTIFIER(size_t i) {
  return getToken(SpadeParser::IDENTIFIER, i);
}


size_t SpadeParser::ReferenceContext::getRuleIndex() const {
  return SpadeParser::RuleReference;
}


std::any SpadeParser::ReferenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitReference(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::ReferenceContext* SpadeParser::reference() {
  ReferenceContext *_localctx = _tracker.createInstance<ReferenceContext>(_ctx, getState());
  enterRule(_localctx, 8, SpadeParser::RuleReference);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(165);
    match(SpadeParser::IDENTIFIER);
    setState(170);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(166);
        match(SpadeParser::T__1);
        setState(167);
        match(SpadeParser::IDENTIFIER); 
      }
      setState(172);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

SpadeParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SpadeParser::ModifiersContext* SpadeParser::DeclarationContext::modifiers() {
  return getRuleContext<SpadeParser::ModifiersContext>(0);
}

SpadeParser::VarDeclContext* SpadeParser::DeclarationContext::varDecl() {
  return getRuleContext<SpadeParser::VarDeclContext>(0);
}

SpadeParser::SepContext* SpadeParser::DeclarationContext::sep() {
  return getRuleContext<SpadeParser::SepContext>(0);
}

SpadeParser::FunctionDeclContext* SpadeParser::DeclarationContext::functionDecl() {
  return getRuleContext<SpadeParser::FunctionDeclContext>(0);
}

SpadeParser::ClassDeclContext* SpadeParser::DeclarationContext::classDecl() {
  return getRuleContext<SpadeParser::ClassDeclContext>(0);
}

SpadeParser::InterfaceDeclContext* SpadeParser::DeclarationContext::interfaceDecl() {
  return getRuleContext<SpadeParser::InterfaceDeclContext>(0);
}

SpadeParser::EnumDeclContext* SpadeParser::DeclarationContext::enumDecl() {
  return getRuleContext<SpadeParser::EnumDeclContext>(0);
}

SpadeParser::AnnoDeclContext* SpadeParser::DeclarationContext::annoDecl() {
  return getRuleContext<SpadeParser::AnnoDeclContext>(0);
}


size_t SpadeParser::DeclarationContext::getRuleIndex() const {
  return SpadeParser::RuleDeclaration;
}


std::any SpadeParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::DeclarationContext* SpadeParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, SpadeParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    modifiers();
    setState(182);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SpadeParser::CONST:
      case SpadeParser::VAR: {
        setState(174);
        varDecl();
        setState(175);
        sep();
        break;
      }

      case SpadeParser::FUN: {
        setState(177);
        functionDecl();
        break;
      }

      case SpadeParser::CLASS: {
        setState(178);
        classDecl();
        break;
      }

      case SpadeParser::INTERFACE: {
        setState(179);
        interfaceDecl();
        break;
      }

      case SpadeParser::ENUM: {
        setState(180);
        enumDecl();
        break;
      }

      case SpadeParser::ANNOTATION: {
        setState(181);
        annoDecl();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EnumDeclContext ------------------------------------------------------------------

SpadeParser::EnumDeclContext::EnumDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SpadeParser::EnumDeclContext::ENUM() {
  return getToken(SpadeParser::ENUM, 0);
}

tree::TerminalNode* SpadeParser::EnumDeclContext::IDENTIFIER() {
  return getToken(SpadeParser::IDENTIFIER, 0);
}

tree::TerminalNode* SpadeParser::EnumDeclContext::IMPLEMENTS() {
  return getToken(SpadeParser::IMPLEMENTS, 0);
}

SpadeParser::ParentListContext* SpadeParser::EnumDeclContext::parentList() {
  return getRuleContext<SpadeParser::ParentListContext>(0);
}

SpadeParser::EnumListContext* SpadeParser::EnumDeclContext::enumList() {
  return getRuleContext<SpadeParser::EnumListContext>(0);
}

SpadeParser::SepContext* SpadeParser::EnumDeclContext::sep() {
  return getRuleContext<SpadeParser::SepContext>(0);
}

std::vector<SpadeParser::MemberDeclContext *> SpadeParser::EnumDeclContext::memberDecl() {
  return getRuleContexts<SpadeParser::MemberDeclContext>();
}

SpadeParser::MemberDeclContext* SpadeParser::EnumDeclContext::memberDecl(size_t i) {
  return getRuleContext<SpadeParser::MemberDeclContext>(i);
}


size_t SpadeParser::EnumDeclContext::getRuleIndex() const {
  return SpadeParser::RuleEnumDecl;
}


std::any SpadeParser::EnumDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SpadeVisitor*>(visitor))
    return parserVisitor->visitEnumDecl(this);
  else
    return visitor->visitChildren(this);
}

SpadeParser::EnumDeclContext* SpadeParser::enumDecl() {
  EnumDeclContext *_localctx = _tracker.createInstance<EnumDeclContext>(_ctx, getState());
  enterRule(_localctx, 12, SpadeParser::RuleEnumDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    match(SpadeParser::ENUM);
    setState(185);
    match(SpadeParser::IDENTIFIER);
    setState(188);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SpadeParser::IMPLEMENTS) {
      setState(186);
      match(SpadeParser::IMPLEMENTS);
      setState(187);
      parentList();
    }
    setState(201);
    _errHandler->sync(this);
